--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.red{
+  background-color: red;
+}
+.green{
+  background-color: green;
+}
